Update index.html - remove the styling on the image

--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -12,7 +12,7 @@
 
 <div>
 {% load static %}
-<img src="{% static "images/diy_django_mini_blog_models.png" %}" alt="My image" style="width:555px;height:540px;"/>
+<img src="{% static "images/diy_django_mini_blog_models.png" %}" alt="My image"/>
 </div>  
 
 {% endblock %}
